[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://font/font_big_dungeon.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/font_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui.jpg" type="Texture" id=4]
[ext_resource path="res://panels/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/Room_001.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 388, 712 )
scale = Vector2( 1.28548, 1.28548 )
texture = ExtResource( 4 )

[node name="RoomManager" type="Node2D" parent="."]

[node name="Room_001" parent="RoomManager" instance=ExtResource( 6 )]

[node name="Desc" type="Label" parent="."]
margin_left = 127.0
margin_top = 899.0
margin_right = 667.0
margin_bottom = 1040.0
custom_colors/font_color = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Una habitacion muy muy oscura, repleta de abundante oscuridad"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_main" type="Button" parent="."]
margin_left = 671.0
margin_top = 10.0
margin_right = 750.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="CenterContainer" parent="."]
margin_left = 124.0
margin_top = 10.0
margin_right = 658.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Items"]
margin_left = 11.0
margin_right = 522.0
margin_bottom = 82.0
custom_constants/separation = 5

[node name="it1" type="Button" parent="Items/HBox"]
margin_right = 81.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="it2" type="Button" parent="Items/HBox"]
margin_left = 86.0
margin_right = 167.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="it3" type="Button" parent="Items/HBox"]
margin_left = 172.0
margin_right = 253.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="it4" type="Button" parent="Items/HBox"]
margin_left = 258.0
margin_right = 339.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="it5" type="Button" parent="Items/HBox"]
margin_left = 344.0
margin_right = 425.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="it6" type="Button" parent="Items/HBox"]
margin_left = 430.0
margin_right = 511.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_inventory" type="Button" parent="."]
margin_left = 27.0
margin_top = 10.0
margin_right = 109.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="CenterContainer" parent="."]
margin_top = 1267.0
margin_right = 774.0
margin_bottom = 1337.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Options"]
margin_left = 38.0
margin_right = 736.0
margin_bottom = 82.0
custom_constants/separation = 25

[node name="op1" type="Button" parent="Options/HBox"]
margin_right = 149.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "opcion 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="op2" type="Button" parent="Options/HBox"]
margin_left = 174.0
margin_right = 331.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "opcion 2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="op3" type="Button" parent="Options/HBox"]
margin_left = 356.0
margin_right = 512.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "opcion 3"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="op4" type="Button" parent="Options/HBox"]
margin_left = 537.0
margin_right = 698.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "opcion 4"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 5 )]
visible = false
